# V-Tune

./: .gitignore  BLUEPRINT.md  CHANGELOG.md  DEPLOY.md  Gemfile  LICENSE  NATIVE.md  README.md  RELEASING.md  capacitor.config.ts  index.html  package-lock.json  package.json  pwa-assets.config.ts  vite.config.ts
.github/workflows/: build-desktop.yml  release.yml
android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/vtune/tuner/: MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: app-store-metadata.md  build-guide.py  privacy.md
fastlane/: Appfile  Fastfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
landing/: index.html  privacy.html
public/: audio-worklet-processor.js
scripts/: bump-version.mjs  check-versions.mjs  generate-icons.mjs  publish-desktop-update.mjs
src/: App.css  App.tsx  globals.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/audio/: AudioEngine.ts  PitchPipe.ts  alwaysOnTop.ts
src/components/: AudioErrorToast.tsx  BandEditor.tsx  ControlBar.tsx  DesktopUpdater.tsx  IsolationBand.tsx  KeyboardHelpModal.tsx  OnboardingTour.tsx  PitchDial.tsx  QuickPitchBar.tsx  ReferenceBar.tsx  SettingsModal.tsx  SettingsPanel.tsx  SpectrumAnalyzer.tsx  Stopwatch.tsx  StopwatchChip.tsx  StrobeDisplay.tsx  TealIconRow.tsx  UpdateBanner.tsx  bgSignal.ts
src/data/: scales.ts
src/hooks/: useKeyboardShortcuts.ts
src/store/: tunerStore.ts
src/utils/: notes.ts  ratios.ts
