[package]
name = "app"
version = "1.0.2"
description = "Precision strobe tuner for handpans and other multi-modal instruments."
authors = ["Simon Baronti"]
license-file = "../LICENSE"
repository = "https://github.com/simonbaronti/V-Tune"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
