[package]
name = "app"
version = "1.1.4"
description = "Precision strobe tuner for handpans and other multi-modal instruments."
authors = ["Simon Baronti"]
license-file = "../LICENSE"
repository = "https://github.com/simonbaronti/V-Tune"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# In-app auto-updater — desktop only (iOS/Android update through their
# stores). `process` provides the relaunch-after-install call.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
